# rustab

./: .gitignore  Cargo.toml  README.md  flake.nix  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 52wwzcvkljw9sxqf2ri3h4j27q6y1i91-source
.github/workflows/: ci.yml  release.yml
crates/rustab-cli/: Cargo.toml
crates/rustab-cli/src/: cli.rs  client.rs  doctor.rs  input.rs  install.rs  listing.rs  main.rs  output.rs  synced.rs  synced_command.rs
crates/rustab-mediator/: Cargo.toml
crates/rustab-mediator/src/: main.rs
crates/rustab-protocol/: Cargo.toml
crates/rustab-protocol/src/: lib.rs
extensions/chrome/: background.js  manifest.json
extensions/firefox/: background.js  background_core.js  manifest.json
extensions/firefox-signed/: rustab@rustab.dev.xpi
scripts/: check_versions.py  download_amo_signed_xpi.py  package_chromium_release.py  refresh_firefox_xpi.sh
