[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-std", "io-util", "macros", "time", "sync", "signal"] }
